--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "soc-tdd-2021-12",
   "version": "0.0.1",
   "description": "Simple codebase for trying TDD",
-  "scripts": { "test": "vitest"},
+  "scripts": {
+    "test": "vitest"
+  },
   "type": "module",
   "author": "Rob Styles",
   "license": "ISC",
   "devDependencies": {
     "vitest": "^2.0.5"
   }
-
 }
